--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "recharts": "^2.6.0"
+    "recharts": "^2.6.0",
+    "regression": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/regression": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.37.0",
